# mini-project

./: CMakeLists.txt  README.md
COTP/: cotp.c
account_wallet_system/: account_wallet_app.cpp
